# LightningFastSpeech2

./: .gitignore  .pylintrc  .python-version  LICENSE  README.md  audio_utils.py  config.ini  dataloader.py  dataset.py  environment.yaml  evaluation.py  fastspeech2.py  generate0.sh  generate1.sh  generate_ab_train_splits.py  ipa_utils.py  model.py  multilingual_librispeech_opus.py  postnet.py  pyproject.toml  snr.py  stats.py  synth.ini  synth.py  synth_oracles.sh  synth_v2.sh  synthesiser.py  train.py  train.sh  train0.sh  train1.sh  train2.sh  train3.sh  train_big_lr.sh  train_small_lr.sh  transformer.py
.cache/: 100.pkl
hifigan/: models.py
litfass/: generate.py  plot.py  train.py
litfass/data/: wada_values.npy
litfass/dataset/: audio_utils.py  cwt.py  datasets.py  metrics.py  snr.py
litfass/fastspeech2/: fastdiff_variances.py  fastspeech2.py  log_gmm.py  loss.py  model.py  noam.py  utils.py
litfass/synthesis/: g2p.py  generator.py
scripts/: generate.sh  train.sh
src/: __main__.py  fastspeech2.py  generate.py  plot.py  train.py
src/dataset/: audio_utils.py  cwt.py  datasets.py  snr.py
src/fastspeech2/: fastspeech2.py  loss.py  model.py  noam.py  torch_transformer.py
src/synthesis/: g2p.py  generator.py
stochastic_duration_predictor/: transforms.py
