[project]
name = "LightningFastSpeech"
version = "0.1"
description = ""
authors = [
    {name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com"},
]
dependencies = [
    "pytorch-lightning>=1.5.10",
    "wandb>=0.12.11",
    "pillow>=9.0.1",
    "matplotlib>=3.5.1",
    "scikit-learn>=1.0.2",
    "seaborn>=0.11.2",
    "phones>=0.0.2",
    "pandarallel>=1.5.7",
    "tgt>=1.4.4",
    "pyworld>=0.3.0",
    "llvmlite>=0.38.0",
    "librosa>=0.9.1",
    "click>=8.0.4",
    "diskcache>=5.4.0",
    "plotly>=5.7.0",
    "kaleido==0.2.1",
    "snreval>=1.2",
    "audiomentations[extras]>=0.25.1",
    "crepe>=0.0.12",
    "textgrid>=1.5",
    "rich>=12.4.4",
    "alignments>=0.0.9",
    "g2p-en>=2.1.0",
    "voicefixer>=0.0.17",
    "huggingface-hub>=0.7.0rc0",
    "pysdtw>=0.0.5",
    "numba>=0.56.2",
    "einops>=0.5.0",
    "SRMRpy @ git+https://github.com/MiniXC/SRMRpy.git",
    "nnAudio>=0.3.2",
]
license = {text = "MIT"}
requires-python = ">=3.8,<3.10"
[project.urls]
Homepage = ""

[project.optional-dependencies]
dev = [
    "line-profiler>=3.5.1",
    "viztracer>=0.15.3",
    "pylint>=2.15.3",
    "black>=22.3.0",
]
extras = [
    "speechbrain>=0.5.10",
    "huggingface-hub==0.7.0rc0",
]
deepspeed = [
    "deepspeed>=0.7.2",
    "fairscale>=0.4.9",
    "cupy>=11.2.0",
]
[tool.pdm]
[tool.pdm.dev-dependencies]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
